After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656068 - pulsesink: errors out if pa_stream_proplist_update() fails with old pulseaudio versions
pulsesink: errors out if pa_stream_proplist_update() fails with old pulseaudi...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-06 04:35 UTC by Jonathan Liu
Modified: 2013-01-23 10:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Liu 2011-08-06 04:35:42 UTC
GStreamer pulseaudio plugin gives an error in applications that call pa_stream_proplist_update() if the remote server does not support it (e.g. on Windows or distributions running older version of PulseAudio daemon). This prevents many media programs from being able to play back files.

The referenced URL describes the issue in more detail and provides a patch.

Reference: https://bugs.launchpad.net/ubuntu/+source/gst-plugins-good0.10/+bug/348540
Comment 1 Tim-Philipp Müller 2013-01-19 13:30:38 UTC
I think this is obsolete these days, since we now require newer pulseaudio versions, but I've removed the fatal error anyway, since it seems the right thing to do to me:

 commit 0c9b039c22d836708431d0ae2af00c23ed40bd01
 Author: Tim-Philipp Müller <tim@centricular.net>
 Date:   Sat Jan 19 13:27:48 2013 +0000

    pulsesink: don't error out if pa_stream_proplist_update() with new tags fails
    
    Shouldn't really happen these days, but if it does, it's not really
    a problem either.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=656068
Comment 2 Tim-Philipp Müller 2013-01-19 13:31:29 UTC
PS: it's best to re-attach patches here in bugzilla instead of saying 'there is a patch on the launchpad bug'. If it's not attached here, it gets missed.