pulsesink: don't error out if pa_stream_proplist_update() with new tags fails

Shouldn't really happen these days, but if it does, it's not really
a problem either.

https://bugzilla.gnome.org/show_bug.cgi?id=656068